# ExperimentOS-AI

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
.superpowers/sdd/: final-fix-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md
apps/api/: __init__.py  ask_service.py  main.py
config/evaluation/: factuality.json  quality_policy.yaml
config/prompt_experiments/: rag_answer_abstention_v1_vs_v2.yaml
data/eval/: agent_dataset.json  ci_smoke_dataset.json  qa_dataset.json
docs/: api.md  architecture.md  dataset.md  development.md  repository_hygiene.md
docs/phase3/: ci_quality_gates.md  factuality_and_hallucination.md  github_actions.md  langsmith_observability.md  opentelemetry.md  phase3_closeout.md  phoenix_observability.md  pr_evaluation_reports.md  prompt_experiments.md  prompt_registry.md  prompt_regression.md  quality_policy.md  reliability_baseline.md
docs/phase4/: statistical_analysis_contracts.md
migrations/: env.py
reports/: agent_e2e_evaluation.md  agent_evaluation.md  evaluation.md
scripts/: generate_synthetic_experiments.py  run_ai_quality_gate.py  validate_ci_environment.py  verify_phase3.py
tests/: analysis_contract_fixtures.py  conftest.py  test_agent_e2e_evaluation.py  test_agent_evaluation.py  test_agent_nodes.py  test_agent_state.py  test_agent_tools.py  test_agent_workflow.py  test_alembic_config.py  test_analysis_contract_documentation.py  test_analysis_contract_serialization.py  test_analysis_estimates.py  test_analysis_requests.py  test_analysis_results.py  test_api_ask.py  test_api_ask_db_integration.py  test_api_health.py  test_business_impact_agent.py  test_business_impact_contracts.py  test_ci_quality_gate.py  test_ci_reporting.py  test_ci_reporting_github.py  test_db_models.py  test_db_session.py  test_decision_agent.py  test_deepeval_evaluation.py  test_docker_compose.py  test_document_chunking.py  test_env_config.py  test_evaluation_harness.py  test_executive_summary_agent.py  test_experiment_analysis_agent.py  test_factuality.py  test_github_actions_ci.py  test_human_approval_agent.py  test_ingestion_load_experiment.py  test_observability_cli.py  test_observability_composite.py  test_observability_config.py  test_observability_integration.py  (+27 more)
(+36 files in other folders)
