[project]
name = "experimentos-ai"
version = "0.1.0"
description = "ExperimentOS AI Python backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.115.0",
  "openai>=1.68.0",
  "pgvector>=0.3.6",
  "psycopg[binary,pool]>=3.2.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "sentence-transformers>=5.1.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.32.0"
]

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "httpx2>=2.0.0",
  "pytest>=8.3.3",
  "ruff>=0.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
